PR/43258: Hauke Fath: remove duplicate setservent declaration